force-app/main/default/objects/Hardware__c/Hardware__c.object-meta.xml
<CustomObject>
    <label>Hardware</label>
    <nameField>
        <displayFormat>HW-{0000000}</displayFormat>
        <label>Hardware Name (Record)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hardware</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>