force-app/main/default/objects/Hardware__c/fields/Auto_Created_Group__c.field-meta.xml
<CustomField>
    <fullName>Auto_Created_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the quote line group was automatically created when this hardware record was created. Used for automation logic and tracking.</description>
    <label>Auto Created Group</label>
    <type>Checkbox</type>
</CustomField>