force-app/main/default/objects/Hardware__c/fields/Configuration_Details__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Details__c</fullName>
    <label>Configuration Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>