force-app/main/default/objects/Hardware__c/fields/CPU_Cores__c.field-meta.xml
<CustomField>
    <fullName>CPU_Cores__c</fullName>
    <label>CPU Cores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>