force-app/main/default/objects/Hardware__c/fields/Feature_Code__c.field-meta.xml
<CustomField>
    <fullName>Feature_Code__c</fullName>
    <description>Hardware feature code or identifier. Used for product eligibility filtering and configuration validation in the hardware-first workflow.</description>
    <inlineHelpText>Custom feature code or identifier for this hardware. Used to determine product eligibility and pricing.</inlineHelpText>
    <label>Feature Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>