force-app/main/default/objects/Hardware__c/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <label>Firmware Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>