force-app/main/default/objects/Hardware__c/fields/GPU_Cores__c.field-meta.xml
<CustomField>
    <fullName>GPU_Cores__c</fullName>
    <label>GPU Cores</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>