force-app/main/default/objects/Hardware__c/fields/Group_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Creation_Date__c</fullName>
    <description>Timestamp when the quote line group was created and linked to this hardware record. Auto-populated by Apex. Used for tracking and reporting.</description>
    <label>Group Creation Date</label>
    <type>DateTime</type>
</CustomField>