force-app/main/default/objects/Hardware__c/fields/Group_Number_List__c.field-meta.xml
<CustomField>
    <fullName>Group_Number_List__c</fullName>
    <label>Group Number List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group 100</fullName>
            </value>
            <value>
                <fullName>Group 1000</fullName>
            </value>
            <value>
                <fullName>Group 200</fullName>
            </value>
            <value>
                <fullName>Group 250</fullName>
            </value>
            <value>
                <fullName>Group 300</fullName>
            </value>
            <value>
                <fullName>Group 400</fullName>
            </value>
            <value>
                <fullName>Group 500</fullName>
            </value>
            <value>
                <fullName>Group 600</fullName>
            </value>
            <value>
                <fullName>Group 700</fullName>
            </value>
            <value>
                <fullName>Group 800</fullName>
            </value>
            <value>
                <fullName>Group 900</fullName>
            </value>
            <value>
                <fullName>Group 950</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>