force-app/main/default/objects/Hardware__c/fields/Hardware_Category__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Category__c</fullName>
    <label>Hardware Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Security Appliance</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>Mobile Device</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>