force-app/main/default/objects/Hardware__c/fields/Hardware_ID__c.field-meta.xml
<CustomField>
    <fullName>Hardware_ID__c</fullName>
    <description>Unique system identifier for the hardware. Used for external integrations and duplicate prevention. External ID for upsert operations.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for this hardware in external systems. Used for integration and duplicate prevention.</inlineHelpText>
    <label>Hardware ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>