force-app/main/default/objects/Hardware__c/fields/Hardware_Name__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Name__c</fullName>
    <description>User-defined name for this hardware record. This name is also used as the default Hardware Group Name when associating hardware with quote line items.</description>
    <inlineHelpText>Enter a descriptive name for this hardware (e.g., &quot;Production Server 01&quot;). This will also be used as the default Hardware Group Name.</inlineHelpText>
    <label>Hardware Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>