force-app/main/default/objects/Hardware__c/fields/Hardware_Platform__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Platform__c</fullName>
    <description>Indicates whether this hardware is iSeries (IBM Power Systems) or Cross Platform. Controls which fields are displayed during hardware creation.</description>
    <inlineHelpText>Select iSeries for IBM Power Systems or Cross Platform for other server types.</inlineHelpText>
    <label>Hardware Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iSeries</fullName>
            </value>
            <value>
                <fullName>Cross Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>