force-app/main/default/objects/Hardware__c/fields/Hardware_Type__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Type__c</fullName>
    <label>Hardware Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>