force-app/main/default/objects/Hardware__c/fields/Hardware_Value__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Value__c</fullName>
    <label>Hardware Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>