force-app/main/default/objects/Hardware__c/fields/Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Name__c</fullName>
    <label>Host Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>