force-app/main/default/objects/Hardware__c/fields/Host_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Host_Operating_System__c</fullName>
    <label>Host Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2200 ClearPath</fullName>
            </value>
            <value>
                <fullName>AIX</fullName>
            </value>
            <value>
                <fullName>HP-UX Itanium</fullName>
            </value>
            <value>
                <fullName>HP-UX PA-RISC</fullName>
            </value>
            <value>
                <fullName>IBM Power</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
            <value>
                <fullName>Linux Itanium</fullName>
            </value>
            <value>
                <fullName>Linux POWER</fullName>
            </value>
            <value>
                <fullName>Linux zSeries</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>MCP ClearPath</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Solaris SPARC</fullName>
            </value>
            <value>
                <fullName>SunSolaris</fullName>
            </value>
            <value>
                <fullName>Unix</fullName>
            </value>
            <value>
                <fullName>VMWare</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>zSeries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>