force-app/main/default/objects/Hardware__c/fields/Hostname__c.field-meta.xml
<CustomField>
    <fullName>Hostname__c</fullName>
    <description>Hostname for Cross Platform hardware. Used to identify the server by its network hostname.</description>
    <inlineHelpText>Enter the hostname or DNS name of this Cross Platform server.</inlineHelpText>
    <label>Hostname (Record)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>