force-app/main/default/objects/Hardware__c/fields/Installed_By__c.field-meta.xml
<CustomField>
    <fullName>Installed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hardware</relationshipName>
    <type>Lookup</type>
</CustomField>