force-app/main/default/objects/Hardware__c/fields/Is_Clustered__c.field-meta.xml
<CustomField>
    <fullName>Is_Clustered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this hardware is part of a cluster configuration.</description>
    <label>Is Clustered</label>
    <type>Checkbox</type>
</CustomField>