force-app/main/default/objects/Hardware__c/fields/Is_Customer_Owned__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Owned__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Customer Owned</label>
    <type>Checkbox</type>
</CustomField>