force-app/main/default/objects/Hardware__c/fields/Is_Virtual__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Virtual</label>
    <type>Checkbox</type>
</CustomField>