force-app/main/default/objects/Hardware__c/fields/iSeries_Model__c.field-meta.xml
<CustomField>
    <fullName>iSeries_Model__c</fullName>
    <description>IBM Power Systems iSeries model number. Controlling field for iSeries Feature Code dependent picklist. Only applicable when Hardware Platform is iSeries.</description>
    <inlineHelpText>Select the IBM Power Systems model number for this iSeries hardware.</inlineHelpText>
    <label>iSeries Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>270</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>510</fullName>
            </value>
            <value>
                <fullName>515</fullName>
            </value>
            <value>
                <fullName>520</fullName>
            </value>
            <value>
                <fullName>525</fullName>
            </value>
            <value>
                <fullName>530</fullName>
            </value>
            <value>
                <fullName>550</fullName>
            </value>
            <value>
                <fullName>570</fullName>
            </value>
            <value>
                <fullName>595</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>620</fullName>
            </value>
            <value>
                <fullName>640</fullName>
            </value>
            <value>
                <fullName>650</fullName>
            </value>
            <value>
                <fullName>720</fullName>
            </value>
            <value>
                <fullName>730</fullName>
            </value>
            <value>
                <fullName>740</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>810</fullName>
            </value>
            <value>
                <fullName>820</fullName>
            </value>
            <value>
                <fullName>825</fullName>
            </value>
            <value>
                <fullName>830</fullName>
            </value>
            <value>
                <fullName>840</fullName>
            </value>
            <value>
                <fullName>870</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>