force-app/main/default/objects/Hardware__c/fields/Last_Modified_By_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hardware2</relationshipName>
    <type>Lookup</type>
</CustomField>