force-app/main/default/objects/Hardware__c/fields/License_Key__c.field-meta.xml
<CustomField>
    <fullName>License_Key__c</fullName>
    <label>License Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>