force-app/main/default/objects/Hardware__c/fields/MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>MAC_Address__c</fullName>
    <label>MAC Address</label>
    <length>17</length>
    <type>Text</type>
</CustomField>