force-app/main/default/objects/Hardware__c/fields/Mcp_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Mcp_System_Type__c</fullName>
    <label>MCP System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A10</fullName>
            </value>
            <value>
                <fullName>A11</fullName>
            </value>
            <value>
                <fullName>A12</fullName>
            </value>
            <value>
                <fullName>A14</fullName>
            </value>
            <value>
                <fullName>A15</fullName>
            </value>
            <value>
                <fullName>A16</fullName>
            </value>
            <value>
                <fullName>A17</fullName>
            </value>
            <value>
                <fullName>A18</fullName>
            </value>
            <value>
                <fullName>A19</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A21</fullName>
            </value>
            <value>
                <fullName>A100</fullName>
            </value>
            <value>
                <fullName>A2400</fullName>
            </value>
            <value>
                <fullName>A2800</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A7</fullName>
            </value>
            <value>
                <fullName>A9</fullName>
            </value>
            <value>
                <fullName>Any System</fullName>
            </value>
            <value>
                <fullName>CC3100</fullName>
            </value>
            <value>
                <fullName>CS180</fullName>
            </value>
            <value>
                <fullName>CS18</fullName>
            </value>
            <value>
                <fullName>CS5</fullName>
            </value>
            <value>
                <fullName>CS500</fullName>
            </value>
            <value>
                <fullName>CS400</fullName>
            </value>
            <value>
                <fullName>CS4080</fullName>
            </value>
            <value>
                <fullName>CS4090</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>