force-app/main/default/objects/Hardware__c/fields/Memory_GB__c.field-meta.xml
<CustomField>
    <fullName>Memory_GB__c</fullName>
    <label>Memory GB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>