force-app/main/default/objects/Hardware__c/fields/Number_of_Processors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Processors__c</fullName>
    <description>Total number of physical processors in the hardware. Critical for hardware-first workflow product eligibility and pricing calculations.</description>
    <inlineHelpText>Number of physical processors. Used for product eligibility filtering and pricing calculations.</inlineHelpText>
    <label>Number of Processors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>