force-app/main/default/objects/Hardware__c/fields/Os2200_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Os2200_System_Type__c</fullName>
    <label>OS2200 System Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1100/90</fullName>
            </value>
            <value>
                <fullName>2200/100</fullName>
            </value>
            <value>
                <fullName>2200/1010</fullName>
            </value>
            <value>
                <fullName>2200/200</fullName>
            </value>
            <value>
                <fullName>2200/3400</fullName>
            </value>
            <value>
                <fullName>2200/3800</fullName>
            </value>
            <value>
                <fullName>2200/400</fullName>
            </value>
            <value>
                <fullName>2200/500</fullName>
            </value>
            <value>
                <fullName>2200/600</fullName>
            </value>
            <value>
                <fullName>2200/8010</fullName>
            </value>
            <value>
                <fullName>2200/8020</fullName>
            </value>
            <value>
                <fullName>2200/8030</fullName>
            </value>
            <value>
                <fullName>2200/8040</fullName>
            </value>
            <value>
                <fullName>2200/8050</fullName>
            </value>
            <value>
                <fullName>2200/8060</fullName>
            </value>
            <value>
                <fullName>2200/8070</fullName>
            </value>
            <value>
                <fullName>2200/8080</fullName>
            </value>
            <value>
                <fullName>2200/900</fullName>
            </value>
            <value>
                <fullName>2200/9010</fullName>
            </value>
            <value>
                <fullName>2200/9020</fullName>
            </value>
            <value>
                <fullName>Any System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>