force-app/main/default/objects/Hardware__c/fields/P_Group_List__c.field-meta.xml
<CustomField>
    <fullName>P_Group_List__c</fullName>
    <label>P Group List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P05</fullName>
            </value>
            <value>
                <fullName>P10</fullName>
            </value>
            <value>
                <fullName>P20</fullName>
            </value>
            <value>
                <fullName>P30</fullName>
            </value>
            <value>
                <fullName>P40</fullName>
            </value>
            <value>
                <fullName>P50</fullName>
            </value>
            <value>
                <fullName>P60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>