force-app/main/default/objects/Hardware__c/fields/Parent_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Parent_Hardware__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Hardware</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Hardware__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Hardware</relationshipLabel>
    <relationshipName>Hardware</relationshipName>
    <type>Lookup</type>
</CustomField>