force-app/main/default/objects/Hardware__c/fields/Port_Count__c.field-meta.xml
<CustomField>
    <fullName>Port_Count__c</fullName>
    <label>Port Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>