force-app/main/default/objects/Hardware__c/fields/Power_Consumption_Watts__c.field-meta.xml
<CustomField>
    <fullName>Power_Consumption_Watts__c</fullName>
    <label>Power Consumption Watts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>