force-app/main/default/objects/Hardware__c/fields/Primary_Asset__c.field-meta.xml
<CustomField>
    <fullName>Primary_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Hardware</relationshipLabel>
    <relationshipName>Hardware</relationshipName>
    <type>Lookup</type>
</CustomField>