force-app/main/default/objects/Hardware__c/fields/Primary_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Hardware</relationshipLabel>
    <relationshipName>Hardware</relationshipName>
    <type>Lookup</type>
</CustomField>