force-app/main/default/objects/Hardware__c/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Hardware</relationshipLabel>
    <relationshipName>Hardware</relationshipName>
    <type>Lookup</type>
</CustomField>