force-app/main/default/objects/Hardware__c/fields/Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group__c</fullName>
    <description>ID of the QuoteLineGroup that this hardware record is associated with. Stored as text since QuoteLineGroup cannot be referenced in custom lookups. Use formula fields or Apex to maintain relationship.</description>
    <label>Quote Line Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>