force-app/main/default/objects/Hardware__c/fields/Rack_Units__c.field-meta.xml
<CustomField>
    <fullName>Rack_Units__c</fullName>
    <label>Rack Units</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>