force-app/main/default/objects/Hardware__c/fields/Replacement_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Hardware__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Hardware</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Hardware (Replacement Hardware)</relationshipLabel>
    <relationshipName>Hardware1</relationshipName>
    <type>Lookup</type>
</CustomField>