force-app/main/default/objects/Hardware__c/fields/Requires_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Requires_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Maintenance</label>
    <type>Checkbox</type>
</CustomField>