force-app/main/default/objects/Hardware__c/fields/Room_Location__c.field-meta.xml
<CustomField>
    <fullName>Room_Location__c</fullName>
    <label>Room Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>