force-app/main/default/objects/Hardware__c/fields/Server_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Server_Location_Type__c</fullName>
    <label>Server Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party On-Prem Hosted</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>HelpSystems Hosted</fullName>
            </value>
            <value>
                <fullName>HS On-Prem</fullName>
            </value>
            <value>
                <fullName>On-Prem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>