force-app/main/default/objects/Hardware__c/fields/Server_Type__c.field-meta.xml
<CustomField>
    <fullName>Server_Type__c</fullName>
    <label>Server Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Online Non-Production</fullName>
            </value>
            <value>
                <fullName>Online Production</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>